Bug 263344 - in dolphin when clicking in another folder, it goes back to the previous folder
Summary: in dolphin when clicking in another folder, it goes back to the previous folder
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: folders (other bugs)
Version First Reported In: 16.12.2
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-16 19:19 UTC by
Modified: 2011-01-17 07:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description 2011-01-16 19:19:43 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Im using kde trunk svn revision 1214845.

When using dolphin and when clicking in another folder, dolphin simply goes back to the previous selected folder.
This happens allways.

Reproducible: Always




OS: Linux (x86_64) release 2.6.36.2-desktop-2mnb
Compiler: gcc
Comment 1 Peter Penz 2011-01-16 19:34:49 UTC
Thanks for the report, but I cannot reproduce this (using Dolphin daily on trunk with the latest sources). Please assure that you are using a clean build and update kdelibs, kdepimlibs and kdebase.
Comment 2 2011-01-16 20:51:26 UTC
I am using an updated trunk with all kde modules from yesterday and today revisions.

However ill be more accurate regarding describing this bug, still im surprised you missed it since you say you use to use in a daily base...

DO this:
open some directory, then open another directory, now go back to the first directory open, and click to open some subdirectory, then youll see dolphin going back to previous folder.

In my case i use to open the dir /mnt/ext3/linux/repos/svn/trunk/KDE/kdelibs 

then i open /home/mmodem/kde/kdelibs

if then i go to /mnt/ext3/linux/repos/svn/trunk/KDE/kdelibs 
and click to open some subfolder, then dolphin ill simply go back to the previous opened folder that in my case is /home/mmodem/kde/kdelibs.

Now please pay attention to what i described and you be able to reproduce this, or your not using trunk.
Comment 3 Peter Penz 2011-01-16 21:04:43 UTC
Sorry, but I cannot reproduce this. Please provide a reproducible (!) example (e.g. I don't have /mnt/ext3/linux/... and it works here when trying it with other folders) and explain how you go back (do you use the back-button, do you use the Places panel etc.). Ideally please attach a zipped small directory structure to the report where the issue can be reproduced. Please also provide the information which view-mode (icons, details or columns) you are using. Thanks in advance.
Comment 4 2011-01-17 05:35:20 UTC
I use to use detailed icon view, but i have tried with icon view and the problem continues.
I use the folders panel in left, and doesnt matter if its a mounted partition being ntfs or ext3, the problem always occurs.

So ill start explaining:

Open some folder, for example the dir /usr/share/apps using the left folders panel clicking in the plus sign, and then click in the apps folders to list the files of the dir/usr/share/apps in the right panel.

Now scrool up and open your home dir /home/user, but to do this open by clicking in the plus sign to open the home dir, when hitting the plus sign dolphin will then scrool the left panel back to the previous dir /usr/share/apps, and this is the bug.

Dolphin should not scrool or go back to the previous dir when hitting in another plus sign.

In the right panel it will continue listing the first files that are in first dir /usr/share/apps

The problem its all related to the use of the folders left panel and the hitting of the plus signs.
Comment 5 Peter Penz 2011-01-17 07:31:21 UTC
Thanks for the detailed update, I could reproduce the issue.
Comment 6 Peter Penz 2011-01-17 07:47:29 UTC
SVN commit 1214978 by ppenz:

Don't assure the visibility of the leaf, if another directory has been opened by the [+]-toggle.

BUG: 263344
FIXED-IN: 4.6.0


 M  +9 -8      folderspanel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1214978
Comment 7 Peter Penz 2011-01-17 07:47:53 UTC
SVN commit 1214979 by ppenz:

Don't assure the visibility of the leaf, if another directory has been opened by the [+]-toggle.

CCBUG: 263344


 M  +9 -8      folderspanel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1214979