Don't assure the visibility of the leaf, if another directory has been opened by the [+]-toggle.

BUG: 263344
FIXED-IN: 4.6.0

svn path=/branches/KDE/4.6/kdebase/apps/; revision=1214978